WIP: static analysis improvements (errorprone etc.)